[2017-08-30 16:57:37 +0200]  Add a source comment                                                       karasu      {d9dee641}
[2017-08-30 16:54:34 +0200]  Fix bug in forward button when changing options in mirrors screen          karasu      {e163e1a5}
[2017-08-30 16:51:11 +0200]  hide/show mirrors listboxes                                                karasu      {b8ae0f25}
[2017-08-30 15:48:44 +0200]  Better radiobuttons placement in mirrors screen                            karasu      {d87e2356}
[2017-08-30 12:37:43 +0200]  Fix location listbox labels size (was too small)                           karasu      {1298d5f2}
[2017-08-30 11:41:22 +0200]  Fix typo and add a debug warning                                           karasu      {1e4b10d9}
[2017-08-30 04:07:45 +0200]  Fixed two unused variables (antbs)                                         karasu      {d05a241d}
[2017-08-30 03:48:32 +0200]  Forgot to remove the option from the run script                            karasu      {9ccb1687}
[2017-08-30 03:43:56 +0200]  Disable rank mirrors option (now we have a full screen to do it)           karasu      {322e9bbc}
[2017-08-30 03:24:28 +0200]  Changes are saved.                                                         karasu      {9b1c6b65}
[2017-08-30 03:05:33 +0200]  It's alive! (dnd works)                                                    karasu      {f49ec9ce}
[2017-08-29 23:43:39 +0200]  Need to know how to pass a widget (or a reference) when doing dnd          karasu      {1cf8ad87}
[2017-08-29 19:31:51 +0200]  Going somewhere with drag and drop (or so it seems)                        karasu      {1959880c}
[2017-08-29 10:26:04 +0200]  In the middle of something                                                 karasu      {5f34184c}
[2017-08-28 03:20:27 +0200]  Adding new mirrors screen (wip)                                            karasu      {f88628ed}